--- a/index.html
+++ b/index.html
@@ -25,9 +25,27 @@
                <p class="text-center lead mb-4">
                   <span id="totalFunctionNum"></span> functions documented
                </p>
-
                <!-- start column -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
+                  <p class="name">
+                     <b>countingCards</b> - uses a switch statement to check
+                     count cards
+                  </p>
+                  <pre style="display: none;"><code></code></pre>
+                  <div class="actions float-right">
+                     <input type="text" class="form-control inline-action" />
+
+                     <button class="btn btn-primary inline-action">
+                        Run
+                     </button>
+                  </div>
+                  <div class="clearfix mb-3"></div>
+                  <div class="alert alert-primary" style="display: none;"></div>
+                  <div class="alert alert-danger" style="display: none;"></div>
+               </div>
+               <!-- end column -->
+               <!-- start column -->
+               <!--<div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name">
                      <b>replaceMe</b> - Copy, paste, then remove this column
                      from index.html
