--- a/index.html
+++ b/index.html
@@ -27,6 +27,43 @@
                </p>
                <!-- start column -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
+                  <p class="name"><b>Generate Random Whole Numbers</b> -</p>
+                  <pre style="display: none;"><code></code></pre>
+                  <div class="actions float-right">
+                     <input type="text" class="form-control inline-action" />
+                     <input type="text" class="form-control inline-action" />
+
+                     <button class="btn btn-primary inline-action">
+                        Run
+                     </button>
+                  </div>
+                  <div class="clearfix mb-3"></div>
+                  <div class="alert alert-primary" style="display: none;"></div>
+                  <div class="alert alert-danger" style="display: none;"></div>
+               </div>
+               <!--end column-->
+               <!-- start column -->
+               <div class="col-12 col-lg-8 offset-lg-2 mb-5">
+                  <p class="name">
+                     <b>lookUpProfile</b> - Array of different people in our
+                     contacts list
+                  </p>
+                  <pre style="display: none;"><code></code></pre>
+                  <div class="actions float-right">
+                     <input type="text" class="form-control inline-action" />
+                     <input type="text" class="form-control inline-action" />
+
+                     <button class="btn btn-primary inline-action">
+                        Run
+                     </button>
+                  </div>
+                  <div class="clearfix mb-3"></div>
+                  <div class="alert alert-primary" style="display: none;"></div>
+                  <div class="alert alert-danger" style="display: none;"></div>
+               </div>
+               <!--end column-->
+               <!-- start column -->
+               <div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name">
                      <b>countingCards</b> - uses a switch statement to check
                      count cards
