add generate random whole numbers function

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
                </p>
                <!-- start column -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
-                  <p class="name"><b>Generate Random Whole Numbers</b> -</p>
+                  <p class="name">
+                     <b>generateRandomWholeNumbers</b> -generate random whole
+                     numbers
+                  </p>
                   <pre style="display: none;"><code></code></pre>
                   <div class="actions float-right">
                      <input type="text" class="form-control inline-action" />
