--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                <!-- start column -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name">
-                     <b>generateRandomWholeNumbers</b> -generate random whole
-                     numbers
+                     <b>generateRanNumRange</b> -generate random whole numbers
+                     within a range
                   </p>
                   <pre style="display: none;"><code></code></pre>
                   <div class="actions float-right">
