--- a/index.html
+++ b/index.html
@@ -33,8 +33,16 @@
                   </p>
                   <pre style="display: none;"><code></code></pre>
                   <div class="actions float-right">
-                     <input type="text" class="form-control inline-action" />
-                     <input type="text" class="form-control inline-action" />
+                     <input
+                        type="text"
+                        class="form-control inline-action"
+                        placeholder="array"
+                     />
+                     <input
+                        type="text"
+                        class="form-control inline-action"
+                        placeholder="element"
+                     />
 
                      <button class="btn btn-primary inline-action">
                         Run
